test/libyul/yulSyntaxTests/datasize_shadowing.yul
{
    function datasize(a) -> b {}
}
// ====
// bytecodeFormat: legacy
// ----
// ParserError 5568: (15-23): Cannot use builtin function name "datasize" as identifier name.
